<?xml version="1.0"?>
<package>
    <name>udcamera</name>
    <version>1.11.0</version>
    <description>The udcamera package</description>

    <maintainer email="lim.lin@uditech.com">amc</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>grid_map_ros</build_depend>
    <build_depend>grid_map_cv</build_depend>
    <build_depend>jsk_rviz_plugins</build_depend>
    <build_depend>opencv2</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>image_transport</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>grid_map_ros</run_depend>
    <run_depend>grid_map_cv</run_depend>
    <run_depend>jsk_rviz_plugins</run_depend>
    <run_depend>opencv2</run_depend>
    <run_depend>cv_bridge</run_depend>

    <export></export>
</package>
